<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.kotlinsampleapp.fragment.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/str_user_img" />

        <TextView
            android:id="@+id/name"
            style="@style/TextLargeStyle"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login"
            style="@style/TextMediumStyle"
            android:layout_marginBottom="15dp"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/row_follow"
            style="@style/DetailRow">

            <TextView
                android:id="@+id/followers"
                style="@style/TextMediumStyle"
                android:layout_width="wrap_content" />

            <TextView
                style="@style/TextMediumStyle"
                android:layout_width="wrap_content"
                android:text="@string/str_followers" />

            <TextView
                android:id="@+id/following"
                style="@style/TextMediumStyle"
                android:layout_width="wrap_content" />

            <TextView
                style="@style/TextMediumStyle"
                android:layout_width="wrap_content"
                android:text="@string/str_following" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_company"
            style="@style/DetailRow">

            <TextView
                style="@style/TextMediumStyle"
                android:layout_width="100dp"
                android:text="@string/str_company" />

            <TextView
                android:id="@+id/company"
                style="@style/TextMediumStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_location"
            style="@style/DetailRow">

            <TextView
                style="@style/TextMediumStyle"
                android:layout_width="100dp"
                android:text="@string/str_location" />

            <TextView
                android:id="@+id/location"
                style="@style/TextMediumStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_email"
            style="@style/DetailRow">

            <TextView
                style="@style/TextMediumStyle"
                android:layout_width="100dp"
                android:text="@string/str_email" />

            <TextView
                android:id="@+id/email"
                style="@style/TextMediumStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_blog"
            style="@style/DetailRow">

            <TextView
                style="@style/TextMediumStyle"
                android:layout_width="100dp"
                android:text="@string/str_blog" />

            <TextView
                android:id="@+id/blog"
                style="@style/TextMediumStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_twitter"
            style="@style/DetailRow">

            <TextView
                style="@style/TextMediumStyle"
                android:layout_width="100dp"
                android:text="@string/str_twitter" />

            <TextView
                android:id="@+id/twitter"
                style="@style/TextMediumStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>